syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.libcotshrink.protobufs;

option java_outer_classname = "ProtobufChat";

import "detail/geochat/chat_group.proto";
import "detail/geochat/hierarchy/hierarchy.proto";

message Chat {
  string parent = 1;
  int32 groupOwner = 2; // TODO: use 2 bits in CustomBytesExt instead of 16 bits here
  string chatroom = 3;
  string id = 4;
  string senderCallsign = 5;
  ChatGroup chatGroup = 6;
  Hierarchy hierarchy = 7;
  string messageId = 8;
}
